logs/Slang/generated/hdlconv/hdlconvertor_p517_2.sv.log
name: hdlconvertor_p517_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p517_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p517_2.sv:1:1: error: language feature not yet supported
class C;
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p517_2.sv:8:1: error: language feature not yet supported
class A;
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p517_2.sv:13:1: error: language feature not yet supported
class B extends A; // heap node
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
